--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL=postgres://postgres:23272412rcs9@db.lxukewbgbwdohusjgqlo.supabase.co:5432/postgres
+DATABASE_URL=postgresql://postgres.lxukewbgbwdohusjgqlo:23272412rcs9@aws-0-sa-east-1.pooler.supabase.com:6543/postgres
 BASE_URL=https://meetease-backend.vercel.app
 FRONTEND_URL=https://meetease.vercel.app
