cambio a mongo db

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL=postgres://postgres:23272412rcs9@db.lxukewbgbwdohusjgqlo.supabase.co:5432/postgres
-BASE_URL=https://meetease-backend.vercel.app
-FRONTEND_URL=https://meetease.vercel.app
+MONGO_URI=mongodb+srv://Juan-Ussa:AVFv80pjSEmntoo5@cluster.8wwsp.mongodb.net/meeteasedb?retryWrites=true&w=majority&appName=Cluster
+FRONTEND_URL=https://meetease-frontend.vercel.app/
+BACKEND_URL=https://meetease-backend.herokuapp.com/
