--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MONGO_URI=mongodb+srv://Juan-Ussa:AVFv80pjSEmntoo5@cluster.8wwsp.mongodb.net/meeteasedb?retryWrites=true&w=majority&appName=Cluster
-FRONTEND_URL=https://meetease-frontend.vercel.app/
-BACKEND_URL=https://meetease-backend.herokuapp.com/
+FRONTEND_URL=https://meetease-frontend.vercel.app
+BACKEND_URL=https://meetease-backend.herokuapp.com
 
