--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,16 @@
     "routes": [
         {
             "src": "/api/(.*)",
+            "dest": "index.js",
+            "headers": {
+                "Access-Control-Allow-Credentials": "true",
+                "Access-Control-Allow-Origin": "https://meetease-frontend.vercel.app",
+                "Access-Control-Allow-Methods": "GET,OPTIONS,PATCH,DELETE,POST,PUT",
+                "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
+            }
+        },
+        {
+            "src": "/(.*)",
             "dest": "index.js"
         }
     ],
@@ -17,7 +27,7 @@
             "source": "/api/(.*)",
             "headers": [
                 { "key": "Access-Control-Allow-Credentials", "value": "true" },
-                { "key": "Access-Control-Allow-Origin", "value": "*" },
+                { "key": "Access-Control-Allow-Origin", "value": "https://meetease-frontend.vercel.app" },
                 { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
                 { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
             ]
