--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://Juan-Ussa:AVFv80pjSEmntoo5@cluster.8wwsp.mongodb.net/meeteasedb?retryWrites=true&w=majority&appName=Cluster
+DATABASE_URI=postgresql://postgres.lxukewbgbwdohusjgqlo:23272412rcs9@aws-0-sa-east-1.pooler.supabase.com:6543/postgres
 FRONTEND_URL=https://meetease-frontend.vercel.app
 BACKEND_URL=https://meetease-backend.herokuapp.com
 
